# Auto_XDP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  auto_xdp_bpf_helpers.py  axdp  bxdp  config.toml  pkt_relay.py  pyproject.toml  setup_xdp.sh  tc_flow_track.c  xdp_firewall.c  xdp_port_sync.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: distro-check.yml  install-e2e.yml  typecheck.yml  update-readme-version.yml
auto_xdp/: admin_cli.py  cli.py  config.py  discovery.py  policy.py  proc_events.py  state.py  syncer.py  tui.py  xdp_required_maps.txt
auto_xdp/admin/: detect.py  main.py  runtime.py
auto_xdp/backends/: base.py  xdp.py
auto_xdp/bpf/: maps.py  syscall.py
bpf/: xdp_firewall.c
bpf/include/: common.h  conntrack.h  ct_flags.h  keys.h  maps.h  parse.h  port_dispatch.h  rate_limit.h  slots.h  trust_acl.h
docs/: tcp-rate-limits.md
handlers/: Makefile  esp_handler.c  gre_handler.c  minecraft_handler.c  sctp_handler.c  xdp_slot_ctx.h
lib/setup/: backend_nft.sh  backend_xdp.sh  build.sh  core.sh  detect.sh  fetch.sh  install.sh  packages.sh  runtime.sh
runtime/: auto_xdp_runtime_common.sh  auto_xdp_start.sh
tests/: run-distro-suite.sh
tests/bash/: test_axdp.sh  test_bpf_build.sh  test_integration.sh  test_setup_xdp.sh  testlib.sh
tests/python/: support.py  test_abuseipdb.py  test_admin_cli.py  test_auto_xdp_bpf_helpers.py  test_bpf_rate_outer_map.py  test_bpf_syscall_helpers.py  test_syn_timeout.py  test_tcp_conn_caps.py  test_udp_global_rl.py  test_xdp_port_sync.py
